k8s_manifests/django-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: elyass359/fssp-django:v3.2
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: profile-pics
          mountPath: /app/profilePics
      volumes:
      - name: profile-pics
        hostPath:
          path: /home/vagrant/fssp/django/profilePics
---
apiVersion: v1
kind: Service
metadata:
  name: django-api
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30800
  type: NodePort
