k8s_manifests/kube-manager.yaml
# Deployment for kube manager
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-manager
  template:
    metadata:
      labels:
        app: kube-manager
    spec:
      serviceAccountName: manager-service-account
      automountServiceAccountToken: true
      containers:
      - name: kube-manager
        image: elyass359/fssp_kube_manager:v1.3
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "300m"
            memory: "300Mi"
        ports:
        - containerPort: 1999

---
# Service for kube manager
apiVersion: v1
kind: Service
metadata:
  name: kube-manager
spec:
  selector:
    app: kube-manager
  ports:
    - protocol: TCP
      port: 1999
      targetPort: 1999
      nodePort: 31999
  type: NodePort
