k8s_manifests/vuejs-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuejs-service
spec:
  selector:
    app: vuejs
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
      nodePort: 30080
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vuejs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vuejs
  template:
    metadata:
      labels:
        app: vuejs
    spec:
      containers:
      - name: vuejs
        image: elyass359/fssp-vue:v3.2-arm
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
        ports:
        - containerPort: 80
